# nx-networkmanagement-applet

./: .travis.yml  CMakeLists.txt  Messages.sh  README.md  travis-build.sh
debian/: README.Debian  README.source  changelog  control  copyright  postinst  postrm
package/: metadata.desktop
package/contents/ui/: CompactRepresentation.qml  PopupDialog.qml  main.qml
